--- a/contact-me.html
+++ b/contact-me.html
@@ -10,19 +10,32 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
+            background-color: #f4f4f4;
         }
         header {
             background-color: #535a3b;
             color: white;
-            padding: 10px 0;
+            padding: 2px 0;
             text-align: center;
+            position: fixed; 
+            width: 100%;
+            top: 0;
+            z-index: 1000
         }
         section {
             max-width: 600px;
-            margin: 50px auto;
+            margin: 100px auto; 
             padding: 20px;
             border: 1px solid #ccc;
             border-radius: 8px;
+            background-color: white; 
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            display: flex;
+            flex-direction: column; 
+        }
+        h2 {
+            color: #333;
+            text-align: center;
         }
         form label {
             display: block;
@@ -34,6 +47,12 @@
             padding: 10px;
             margin-bottom: 15px;
             box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        form input:focus, form textarea:focus {
+            border-color: #535a3b; 
+            outline: none
         }
         form button {
             padding: 10px;
@@ -43,6 +62,10 @@
             border-radius: 4px;
             cursor: pointer;
             width: 100%;
+            transition: background-color 0.3s ease; 
+        }
+        form button:hover {
+            background-color: #4b5a3b; 
         }
     </style>
 </head>
